[package]
name = "yakui-vulkan"
description = "vulkan bindings for yakui"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

[dependencies]

[dev-dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ash-window = "0.13"
image = "0.24.5"
raw-window-handle = "0.6.0"
winit = "0.30.0"
