[package]
name = "yakui"
description = "A UI library for games"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

[features]
default = ["default-fonts"]

default-fonts = ["yakui-widgets/default-fonts"]

[dependencies]

[dev-dependencies]
bootstrap = { path = "../bootstrap" }
lyon_tessellation = "1.0.11"
